<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_titulo"
        android:textSize="@dimen/tam_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_centigrados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tam_margenes"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="@dimen/tam_margenes"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/txt_ayuda_centigrados"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#E10D0D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <Button
        android:id="@+id/bt_convertirc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="convertir_centigrados"
        android:text="@string/titulo_boton_c"
        app:layout_constraintEnd_toEndOf="@+id/edt_centigrados"
        app:layout_constraintStart_toStartOf="@+id/edt_centigrados"
        app:layout_constraintTop_toBottomOf="@+id/edt_centigrados" />

    <TextView
        android:id="@+id/txt_kelvin"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/resultado_kelvin"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_convertirc" />

    <TextView
        android:id="@+id/txt_farenheit"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/resultado_farenheit"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_kelvin"
        app:layout_constraintStart_toStartOf="@+id/txt_kelvin"
        app:layout_constraintTop_toBottomOf="@+id/txt_kelvin" />
</androidx.constraintlayout.widget.ConstraintLayout>